# hungry-bear-api

./: .gitignore  .pre-commit-config.yaml  README.md  database.py  pyproject.toml  server.py
.github/workflows/: lint.yml  test.yml
scripts/: database.py  main.py  tickers.py
src/: dummy.py
src/api/: __init__.py
src/api/dependencies/: __init__.py  database.py
src/api/routers/: __init__.py  heartbeat.py  ticker.py
src/config/: __init__.py  environment.py  logging.py
src/config/store/: logging.ini
src/models/: __init__.py  base.py  option.py  ticker.py
src/schemas/: __init__.py  base.py  option.py  ticker.py
src/utils/: database.py
tests/: conftest.py  test_dummy.py
tests/test_api/: conftest.py  test_heartbeat.py  test_ticker.py
