[tool.poetry]
name = "hungry-bear-api"
version = "0.1.0"
description = "API for the hungry-bear project"
authors = ["Ashesh Anand <62696185+ashesh705@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
httpx = "^0.18.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
isort = "^5.8.0"
black = "^21.4b1"
flake8 = "^3.9.1"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pre-commit = "^2.12.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -v -Werror"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = [
  "src"
]
